<resources>
    <string name="app_name">BuildUIWithLayoutEditor2</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="jobtitle">JobTitle</string>
    <string name="employee_information">Employee information text here...</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="employeeAvatar">avatar</string>
    <string name="basic_text">Lorem ipsum dolor sit amet, lorem pellentesque at, nonummy purus mi, vestibulum nulla feugiat a posuere tellus, quam ac dui. Morbi molestie. Sed justo animi risus sed aliquam. In at. Eu mi ac nobis consectetuer dictum venenatis, pede eu in porttitor pulvinar vivamus, est pede ut bibendum et pretium.</string>
</resources>
