<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="50dp"
            android:id="@+id/linearLayout">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/employee1"
                    android:id="@+id/imageView" android:layout_weight="1"
                    android:contentDescription="@string/employeeAvatar"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:layout_width="198dp"
                    android:layout_height="match_parent">
                <TextView
                        android:text="@string/firstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/firstnameTextView"/>
                <TextView
                        android:text="@string/lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/lastnameTextView"/>
                <TextView
                        android:text="@string/jobtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/jobtitleTextView"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
                android:text="@string/employee_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/employeeInfoTextView"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" android:id="@+id/linearLayout2">
        <TextView
                android:text="@string/_1"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/oneTextView" android:layout_weight="1"
                android:onClick="numberClicked"/>
        <TextView
                android:text="@string/_2"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/twoTextView" android:layout_weight="1"
                android:onClick="numberClicked"/>
        <TextView
                android:text="@string/_3"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/threeTextView" android:layout_weight="1"
                android:onClick="numberClicked"/>
        <TextView
                android:text="@string/_4"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/fourTextView" android:layout_weight="1"
                android:onClick="numberClicked"/>
        <TextView
                android:text="@string/_5"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/fiveTextView" android:layout_weight="1"
                android:onClick="numberClicked"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>